--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,6 @@ footer a:hover { text-decoration: underline; }
 © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
 </footer>
 
-<!-- Three.js -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
@@ -104,7 +103,7 @@ let targetRotY = baseRotY;
 let targetRotX = baseRotX;
 let baseY = 0;
 
-// Kopf-Aufrichten
+// Kopf aufrichten
 let rising = false;
 let riseStartTime = 0;
 const riseDuration = 1200;
@@ -142,6 +141,10 @@ loader.load("./avatar.glb", gltf=>{
   model.rotation.x = baseRotX;
   scene.add(model);
   loadingText.style.display="none";
+
+  // Dummy Utterance für Edge TTS aktivieren
+  speechSynthesis.speak(new SpeechSynthesisUtterance(""));
+
   animate();
 }, undefined, err=>{
   console.error("Fehler beim Laden des Modells:",err);
@@ -153,10 +156,10 @@ function animate(){
   if(model){
     if(rising){
       const t = (performance.now() - riseStartTime) / riseDuration;
-      const easeT = t < 0 ? 0 : (t > 1 ? 1 : (-Math.cos(Math.PI * t)/2 + 0.5));
-      targetRotY = baseRotY * (1 - easeT);
-      targetRotX = baseRotX * (1 - easeT);
-      if(t >= 1) rising = false;
+      const easeT = t<0?0:(t>1?1:(-Math.cos(Math.PI*t)/2+0.5));
+      targetRotY = baseRotY*(1-easeT);
+      targetRotX = baseRotX*(1-easeT);
+      if(t>=1) rising=false;
     }
 
     if(talking){
@@ -167,8 +170,8 @@ function animate(){
     } else {
       model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
-      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
-      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
+      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z||0,0,0.02);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY,0.02);
     }
   }
   renderer.render(scene,camera);
@@ -177,7 +180,7 @@ function animate(){
 window.addEventListener("resize", ()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
+  renderer.setSize(window.innerWidth, window.innerHeight);
 });
 
 const micBtn = document.getElementById("micBtn");
@@ -209,18 +212,13 @@ if("webkitSpeechRecognition" in window){
   micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
 }
 
-// Stimme & sprechen (Edge-kompatibel)
+// --- Stimme & Sprechen ---
 let maleVoice = null;
 function loadVoices(){
   const voices = speechSynthesis.getVoices();
   maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
               voices.find(v=>v.lang.startsWith("de")) ||
               voices[0]||null;
-  // Edge: speechSynthesis muss initialisiert werden
-  if(!speechSynthesis.speaking && maleVoice){
-    const testUtter = new SpeechSynthesisUtterance("");
-    speechSynthesis.speak(testUtter);
-  }
 }
 speechSynthesis.onvoiceschanged = loadVoices;
 loadVoices();
@@ -238,7 +236,7 @@ function speak(text){
   speechSynthesis.speak(utter);
 }
 
-// Begrüßung & Mikrofon
+// --- Begrüßung & Mikrofon getrennt ---
 micBtn.onclick = () => {
   if(!recognition) return;
 
@@ -252,10 +250,10 @@ micBtn.onclick = () => {
 
   if(recognizing){
     recognition.stop();
-    micBtn.style.background="#222";
+    micBtn.style.background = "#222";
   } else {
     recognition.start();
-    micBtn.style.background="#555";
+    micBtn.style.background = "#555";
   }
   recognizing = !recognizing;
 };
