--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+<!-- Standard Favicon -->
+<link rel="icon" href="avatar.png" type="image/png">
+
+<!-- Für Android / Chrome Startbildschirm -->
+<link rel="apple-touch-icon" href="avatar.png">
+<meta name="theme-color" content="#000000">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Frag Friedrich Barbarossa</title>
