--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,6 +102,7 @@ footer a:hover { text-decoration: underline; }
 
 <script>
 let model, talking=false, greeted=false;
+let thinking = false;   /* ← NEU */
 
 // Kopf-Neigung nach Laden
 let baseRotY = -0.35;
@@ -170,6 +171,11 @@ function animate(){
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(Date.now()*0.0019)*0.015, 0.08);
       model.rotation.z = Math.sin(Date.now()*0.0012)*0.015;
       model.position.y = baseY + Math.sin(Date.now()*0.01)*0.002;
+
+    } else if (thinking) {   /* ← NEU */
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + 0.10, 0.05);
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.05);
+
     } else {
       model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
@@ -196,9 +202,27 @@ if("webkitSpeechRecognition" in window){
   recognition.continuous=false;
   recognition.interimResults=false;
 
+  /* Thinking-Hmm Funktion */
+  function playThinkingHmm() {
+    const utt = new SpeechSynthesisUtterance("Hm… einen Moment…");
+    utt.lang = "de-DE";
+    utt.rate = 0.95;
+    utt.pitch = 0.7;
+    utt.voice = maleVoice;
+    utt.volume = 0.6;
+
+    thinking = true;
+
+    speechSynthesis.speak(utt);
+  }
+
   recognition.onresult=async (event)=>{
     const text = event.results[0][0].transcript;
-    console.log("🎙️ Gesprochen:", text);
+
+    /* ← NEU: sofort Thinking + Hm... starten */
+    thinking = true;
+    playThinkingHmm();
+
     try{
       const resp = await fetch("/ask", {
         method:"POST",
@@ -234,7 +258,13 @@ function speak(text){
   utter.pitch=0.6;
   utter.voice = maleVoice;
   utter.volume = 0.6;
-  utter.onstart=()=>{ talking=true; };
+
+  /* ← NEU: Antwort beginnt → Thinking stoppen */
+  utter.onstart=()=>{
+    thinking = false;
+    talking = true;
+  };
+
   utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
